force-app/main/default/objects/ShortenedLink__c/ShortenedLink__c.object-meta.xml
<CustomObject>
    <description>Stores original URLs, shortened URLs, and QR code metadata</description>
    <label>Shortened Link</label>
    <pluralLabel>Shortened Links</pluralLabel>
    <nameField>
        <label>Shortened Link Name</label>
        <type>AutoNumber</type>
        <displayFormat>SL-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>