force-app/main/default/objects/ShortenedLink__c/fields/Access_Count__c.field-meta.xml
<CustomField>
    <fullName>Access_Count__c</fullName>
    <label>Access Count</label>
    <defaultValue>0</defaultValue>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>