force-app/main/default/objects/ShortenedLink__c/fields/CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy__c</fullName>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Shortened Links</relationshipLabel>
    <relationshipName>ShortenedLinks</relationshipName>
    <type>Lookup</type>
</CustomField>