force-app/main/default/objects/ShortenedLink__c/fields/Original_URL__c.field-meta.xml
<CustomField>
    <fullName>Original_URL__c</fullName>
    <label>Original URL</label>
    <length>255</length>
    <type>Url</type>
</CustomField>