force-app/main/default/objects/ShortenedLink__c/fields/QR_Code_URL__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_URL__c</fullName>
    <label>QR Code URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>