force-app/main/default/objects/ShortenedLink__c/fields/Shortened_URL__c.field-meta.xml
<CustomField>
    <fullName>Shortened_URL__c</fullName>
    <label>Shortened URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>